--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:h2:mem:camunda
+server.port=1598
+server.sessionTimeout=60
+#spring.datasource.url=jdbc:h2:mem:camunda
 
 #Use this config in case you want to persist camunda data into file system (comment the config above in that case)
-#spring.datasource.url=jdbc:h2:~/camunda;DB_CLOSE_ON_EXIT=false
+spring.datasource.url=jdbc:h2:~/camunda;DB_CLOSE_ON_EXIT=false
